src/index.scss
@import "slim-select/styles";

.radio-btn input {
  display: none;
}

.radio-btn > span {
  display: inline-block;
  color: #666;
  flex-direction: row;
  width: 120px;
  border: 1px solid #666;
  background-color: #fff;
  box-sizing: border-box;
  font-size: 16px;
  padding: 4px 6px;
}

.radio-btn:first-child span {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.radio-btn:last-child span {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-left: none;
}
.radio-btn:first-child input:not(:checked) + span {
  border-right: none;
}

.radio-btn input:checked + span {
  color: #007aff;
  border: 1px solid #007aff;
}

.cell {
  display: table-cell;
  vertical-align: top;
}
.cell:not(.text-center) {
  text-align: start;
}

#content {
  overflow-x: auto;
  overflow-y: visible;
  height: 100vh;
}

#list {
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
}

#compare {
  width: max-content;
}

.table-row.fixed {
  position: sticky;
  top: 69px;
  background-color: white;
  z-index: 2;
}

#compare .cell {
  min-width: 160px;
  padding: 8px;
  border-right: 1px solid #dcdee2;
  max-width: 270px;
  width: 33vw;
  box-sizing: border-box;
}

#compare .cell:last-child {
  border-right: none;
}

#compare .cell.header {
  min-width: auto;
  max-width: 135px;
  width: 15vw;
  position: relative;
}

#compare .header a {
  text-decoration: none;
  color: #333;
}

#compare .header .export {
  text-decoration: none;
  color: #007aff;
}

#compare .params-group {
  clear: both;
  padding-top: 12px;
}

#compare .params-title {
  font-weight: bold;
  position: sticky !important;
  left: 0;
  max-width: none !important;
  width: auto !important;
}

#compare .param-title {
  color: gray;
  font-size: small;
  position: sticky !important;
  left: 0;
  background: white;
  z-index: 1;
}
#compare a .param-title {
  text-decoration: none;
  color: #007aff;
}
#compare .param-text {
  font-size: small;
}
#compare .param-text span div {
  display: inline;
}
#compare .table-row.focus {
  .param-title {
    color: #333;
  }
  .cell {
    background: rgb(255 245 191);
  }
}

#compare .params-group-title {
  text-wrap: nowrap;
}

:root {
  --ss-primary-color: #007aff;
  --ss-font-color: #333;
}

.ss-main {
  width: 240px;
  max-width: 100%;
}

.ss-main {
  margin: 3px 0;
}

.ss-main .ss-multi-selected .ss-values .ss-disabled {
  color: #666;
}

.ss-main .ss-values .ss-value {
  animation: none !important;
}

.ss-list {
  text-align: start;
}

.ss-main .ss-values .ss-value .ss-value-delete {
  border-left: none;
  padding-left: 0;
}

.ss-and .ss-value + .ss-value > .ss-value-text::before {
  content: "& ";
}

.ss-or .ss-value + .ss-value > .ss-value-text::before {
  content: "/ ";
}

.show-all {
  color: #666;
  border: 1px solid #666;
  background-color: #fff;
  box-sizing: border-box;
  font-size: 12px;
  padding: 3px 5px;
  border-radius: 4px;

  &.active,
  &:hover {
    color: #007aff;
    border: 1px solid #007aff;
  }
}

.filter-value {
  background-color: #007aff;
  color: white;
  padding: 3px 5px;
  font-size: 12px;
  border-radius: 4px;
  white-space: nowrap;
}

.table-row .header h4 {
  margin: 0;
}

.table-row p {
  font-size: smaller;
  margin: 0;
  line-height: 1.5;

  a {
    color: var(--primary);
    text-underline-offset: 4px;
    &:hover {
      @media (hover: hover) {
        text-decoration-line: underline;
      }
    }
  }
}

.table-row .img {
  max-width: 100%;
  max-height: 250px;
  margin: 6px 0;
}

.select-option {
  float: inline-end;
}

.badges {
  font-size: small;
  padding-top: 4px;
  display: block;
}

.with-corner-badge {
  padding-top: 22px !important;
}

.cell .corner-badge-left {
  left: 0;
}
.corner-badge-left {
  position: absolute;
  left: -10px;
  top: 0;
  border-bottom-right-radius: 5px;
  padding: 2px 6px;
}

.downloads {
  font-size: smaller;
  text-transform: uppercase;
  margin-inline-end: 10px;
  font-weight: bold;
}

.download {
  font-size: 22px;
  padding: 5px 10px 5px 0px;
  display: inline-block;
  color: forestgreen;
}

.download i {
  vertical-align: middle;
}

.download .fa-code {
  font-size: 18px;
}

.community {
  margin-inline-start: 10px;
}

.param-text .community {
  margin-inline-start: 0;
  margin-inline-end: 10px;
}

.community i,
.community img {
  display: inline-block;
  font-style: normal;
  font-size: 20px;
  margin: -3px 0;
  vertical-align: middle;
}

.badge {
  float: left;
  margin-bottom: 4px;
  padding: 2px 4px;
  border-radius: 4px;
  margin-right: 4px;
}

.dynamic-more {
  position: relative;
  height: 76px;
  overflow: hidden;
}

.more {
  position: relative;
  height: 76px;
  transition-property: height;
  transition-duration: 1s;
  overflow: hidden;
}

.more .fade-out {
  position: absolute;
  bottom: 0;
  height: 100%;
  width: 100%;
  background: linear-gradient(
    rgba(255, 255, 255, 0) 50%,
    rgba(255, 255, 255, 1)
  );
  cursor: pointer;
}
.focus .more .fade-out {
  background: linear-gradient(
    rgba(255, 245, 191, 0) 50%,
    rgba(255, 245, 191, 1)
  );
  cursor: pointer;
}

.more .text {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
}

html.theme-mode-dark {
  & {
    filter: invert(100%) hue-rotate(180deg);
  }

  & img,
  & input[type="image"] {
    filter: invert(100%) hue-rotate(-180deg);
  }
}

